Tue Jul 26 21:22:45 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/examples/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.h:
        
          Added 'CIDL_' prefix to the scoped name of the exec impl class's
          base class, in the impl class declaration inheritance list. This
          file was overlooked when making similar changes to other exec
          impl classes in CIAO tests and examples.

Mon Jul 26 13:54:12 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * docs/schema/cid.xsd
        * docs/schema/cpd.xsd
        * docs/schema/iad.xsd
        * docs/schema/Modified_Deployment.xsd

        Added <xsd:attribute name="href"> for cid/cpd/iad(.xsd) and changed Modified_Deployment.xsd
        accordingly.We will need href attribute in the repository manager process.

        * DAnCE/Config_Handlers/iad.cpp
        * DAnCE/Config_Handlers/iad.hpp
        * DAnCE/Config_Handlers/cid.cpp
        * DAnCE/Config_Handlers/cid.hpp
        * DAnCE/Config_Handlers/cpd.cpp
        * DAnCE/Config_Handlers/cpd.hpp

        Regenerated xsc codes for updated schemas in CIAO/docs/schema/

        * DAnCE/Config_Handlers/STD_CID_Handler.cpp
        * DAnCE/Config_Handlers/STD_CID_Handler.h
        * DAnCE/Config_Handlers/STD_CPD_Handler.cpp
        * DAnCE/Config_Handlers/STD_CPD_Handler.h
        * DAnCE/Config_Handlers/STD_IAD_Handler.cpp
        * DAnCE/Config_Handlers/STD_IAD_Handler.h
        * DAnCE/Config_Handlers/STD_PC_Intf.cpp
        * DAnCE/Config_Handlers/STD_PC_Intf.h
        * DAnCE/Config_Handlers/STD_PCD_Handler.cpp
        * DAnCE/Config_Handlers/STD_PCD_Handler.h
        * DAnCE/Config_Handlers/Config_Handlers.mpc

        Added new handlers for mapping Config_Handlers::PackageConfiguration to Deployment:PackageConfiguration.
        Updated Config_Handlers.mpc accordingly
        
Tue Jul 26 12:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/new_RepositoryManager/RMadmin.cpp: